# single_instance

./: CMakeLists.txt  README.md
include/: ipc.hpp  single_instance.hpp
test/: main.cpp
